--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,26 @@
-#open设置
+##open设置
+#APIkey
 openAI.key=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
+#代理域名
 openAI.domain=api.openai-proxy.com
+#协议
 openAI.protocol=https
+#模型
 openAI.model=gpt-3.5-turbo
 
-# cq机器人设置
-cqhttp.url=http://127.0.0.1:1234
+##openai生成图片的参数
+#生成的图片数量 1-10
+openAI.img.num=1
+#生成的图片大小 256x256, 512x512, or 1024x1024
+openAI.img.size=512x512
+#生成的图片返回形式 url or b64_json
+openAI.img.responseFormat=url
+
+## cq机器人设置
+#cqhttp的访问地址
+#cqhttp.url=http://127.0.0.1:1234
+cqhttp.url=https://19kx547030.zicp.fun
+#cqhttp的默认私聊用户
 cqhttp.userId=204594564
+#cqhttp的token
 cqhttp.access_token=75c401f6bd15cb85ecfaf3b357f56456
