--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,15 +5,25 @@ openAI.key=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
 openAI.domain=api.openai-proxy.com
 #协议
 openAI.protocol=https
-#模型
-openAI.model=gpt-3.5-turbo
 
-##openai生成图片的参数
+##openai聊天的设置
+#ai聊天用到的模型
+openAI.chat.model=gpt-3.5-turbo
+#聊天时生成的最大tokens数 默认无限，实际上超过4096会报错
+openAI.chat.max_tokens=
+
+##openai生成文本的设置
+#生成的文本最大tokens数 默认16
+openAI.text.max_tokens=1000
+#文本生成用到的模型
+openAI.text.model=text-davinci-003
+
+##openai生成图片的设置
 #生成的图片数量 1-10
 openAI.img.num=1
 #生成的图片大小 256x256, 512x512, or 1024x1024
 openAI.img.size=512x512
-#生成的图片返回形式 url or b64_json
+#生成的图片返回形式 url or b64_json,【base64日志会占用大量空间，强烈建议用url的方式】
 openAI.img.responseFormat=url
 
 ## cq机器人设置
