--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,9 @@
-##open设置
+##全局设置
+#接口服务选择 1-openAI-chatGPT,2-百度-文心一言,3-阿里-通义千问,4-Microsoft-newBing
+server.choose=1
+
+
+##openAI设置
 #APIkey
 openAI.key=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
 #代理域名
@@ -6,19 +11,19 @@ openAI.domain=api.openai-proxy.com
 #协议
 openAI.protocol=https
 
-##openai聊天的设置
+##openAI聊天的设置
 #ai聊天用到的模型
 openAI.chat.model=gpt-3.5-turbo
 #聊天时生成的最大tokens数 默认无限，实际上超过4096会报错
 openAI.chat.max_tokens=
 
-##openai生成文本的设置
+##openAI生成文本的设置
 #生成的文本最大tokens数 默认16
 openAI.text.max_tokens=1000
 #文本生成用到的模型
 openAI.text.model=text-davinci-003
 
-##openai生成图片的设置
+##openAI生成图片的设置
 #生成的图片数量 1-10
 openAI.img.num=1
 #生成的图片大小 256x256, 512x512, or 1024x1024
@@ -26,10 +31,14 @@ openAI.img.size=512x512
 #生成的图片返回形式 url or b64_json,【base64日志会占用大量空间，强烈建议用url的方式】
 openAI.img.responseFormat=url
 
-## cq机器人设置
+
+##文心一言设置
+#baidu.key=
+
+##cq机器人设置
 #cqhttp的访问地址
-#cqhttp.url=http://127.0.0.1:1234
-cqhttp.url=https://19kx547030.zicp.fun
+cqhttp.url=http://127.0.0.1:1234
+#cqhttp.url=https://19kx547030.zicp.fun
 #cqhttp的默认私聊用户
 cqhttp.userId=204594564
 #cqhttp的token
