增加连续聊天功能 其他用户也可以使用chatgpt了 增加机器人好友申请自动通过

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -24,11 +24,11 @@ openAI.text.max_tokens=1000
 openAI.text.model=text-davinci-003
 
 ##openAI生成图片的设置
-#生成的图片数量 1-10
+#生成的图片数量 1-10 默认1
 openAI.img.num=1
-#生成的图片大小 256x256, 512x512, or 1024x1024
+#生成的图片大小 256x256, 512x512, or 1024x1024 默认1024x1024
 openAI.img.size=512x512
-#生成的图片返回形式 url or b64_json,【base64日志会占用大量空间，强烈建议用url的方式】
+#生成的图片返回形式 url or b64_json,默认url【base64日志会占用大量空间，强烈建议用url的方式】
 openAI.img.responseFormat=url
 
 
@@ -37,8 +37,8 @@ openAI.img.responseFormat=url
 
 ##cq机器人设置
 #cqhttp的访问地址
-cqhttp.url=http://127.0.0.1:1234
-#cqhttp.url=https://19kx547030.zicp.fun
+#cqhttp.url=http://127.0.0.1:1234
+cqhttp.url=https://19kx547030.zicp.fun
 #cqhttp的默认私聊用户
 cqhttp.userId=204594564
 #cqhttp的token
