修复docker部署后乱码问题 增加启动和停止脚本 优化日志文件归类 添加pm2启动json maven打包增加打zip包

--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,25 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- 自定义打zip包 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
