openaikey过期，替换使用api2d服务

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,9 +5,11 @@ server.choose=1
 
 ##openAI设置
 #APIkey
-openAI.key=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
+#openAI.key=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
+openAI.key=fk205645-xRumhF4CJECBDcwikvFjEuXD2w966nFb
 #代理域名
-openAI.domain=api.openai-proxy.com
+#openAI.domain=api.openai-proxy.com
+openAI.domain=openai.api2d.net
 #协议
 openAI.protocol=https
 
