添加百度文心一言服务

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 ##全局设置
 #接口服务选择 1-openAI-chatGPT,2-百度-文心一言,3-阿里-通义千问,4-Microsoft-newBing
-server.choose=1
+server.choose=2
 
 
 ##openAI设置
@@ -35,7 +35,17 @@ openAI.img.responseFormat=url
 
 
 ##文心一言设置
-#baidu.key=
+#文心千帆appid
+baidu.appId=36814888
+#文心千帆apikey
+baidu.apiKey=YNXiKP4ufgV7vz7bFSKlecYy
+#文心千帆secretKey
+baidu.secretKey=yMcdP5ss3ZojfHdX3rdNLaTErNvhwXHV
+#百度账号accessKey
+baidu.account.accessKey=45e3691ad2574318bbffed235092b971
+#百度账号secretKey
+baidu.account.secretKey=bc6ddaf85b8e410f9b6636a13c40692b
+
 
 ##cq机器人设置
 #cqhttp的访问地址
