--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,16 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.8.RELEASE</version>
+        <version>2.3.12.RELEASE</version>
     </parent>
 
     <properties>
         <java.version>1.8</java.version>
         <lombok.version>1.18.24</lombok.version>
         <fastjson.version>1.2.83</fastjson.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.1</junit.version>
+        <tongyiqianwen.version>1.1</tongyiqianwen.version>
+        <wenxinyiyan.version>0.10.274</wenxinyiyan.version>
     </properties>
 
     <dependencies>
@@ -41,13 +43,32 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
+        <!--百度云sdk-->
         <dependency>
             <groupId>com.baidubce</groupId>
             <artifactId>bce-java-sdk</artifactId>
-            <version>0.10.273</version>
+            <version>${wenxinyiyan.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <!--阿里云sdk-->
+        <!--<dependency>-->
+        <!--    <groupId>com.alibaba</groupId>-->
+        <!--    <artifactId>dashscope-sdk-java</artifactId>-->
+        <!--    <version>${tongyiqianwen.version}</version>-->
+        <!--</dependency>-->
     </dependencies>
 
+    <!--<repositories>-->
+    <!--    <repository>-->
+    <!--        <id>aliyun</id>-->
+    <!--        <url>https://mvnrepository.com/artifact/com.alibaba/dashscope-sdk-java</url>-->
+    <!--    </repository>-->
+    <!--</repositories>-->
     <packaging>jar</packaging>
     <build>
         <!--打成jar包的名称-->
