增加百度AI作画 增加阿里通义千问和通义万象

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -34,7 +34,7 @@ openAI.img.size=512x512
 openAI.img.responseFormat=url
 
 
-##文心一言设置
+##百度云文心一言设置
 #文心千帆appid
 baidu.appId=36814888
 #文心千帆apikey
@@ -45,6 +45,64 @@ baidu.secretKey=yMcdP5ss3ZojfHdX3rdNLaTErNvhwXHV
 baidu.account.accessKey=45e3691ad2574318bbffed235092b971
 #百度账号secretKey
 baidu.account.secretKey=bc6ddaf85b8e410f9b6636a13c40692b
+#百度获取ACCESS_TOKEN接口地址
+baidu.getToken.url=https://aip.baidubce.com/oauth/2.0/token
+#百度云文心一言URL
+#ERNIE-Bot
+baidu.wenxinyiyan.url=https://aip.baidubce.com/rpc/2.0/ai_custom/v1/wenxinworkshop/chat/completions
+#ERNIE-Bot-turbo
+#baidu.wenxinyiyan.url=https://aip.baidubce.com/rpc/2.0/ai_custom/v1/wenxinworkshop/chat/eb-instant
+
+
+##百度AI作画参数设置
+#百度AI作画URL
+#基础版
+baidu.aizuohua.url=https://aip.baidubce.com/rpc/2.0/ernievilg/v1/txt2img
+#高级版
+#baidu.aizuohua.url=https://aip.baidubce.com/rpc/2.0/ernievilg/v1/txt2imgv2
+#百度AI作画获取图片
+#基础版
+baidu.aizuohua.getImg.URL=https://aip.baidubce.com/rpc/2.0/ernievilg/v1/getImg
+#高级版
+#baidu.aizuohua.getImg.URL=https://aip.baidubce.com/rpc/2.0/ernievilg/v1/getImgv2
+#图片大小，支持1024*1024、1024*1536、1536*1024，默认1024*1024
+baidu.aizuohua.size=1024*1024
+#图片数量，支持1-6张，默认1
+baidu.aizuohua.num=1
+#图片风格，支持目前支持风格有：探索无限、古风、
+# 二次元、写实风格、浮世绘、low poly 、
+# 未来主义、像素风格、概念艺术、赛博朋克、洛丽塔风格、
+# 巴洛克风格、超现实主义、水彩画、蒸汽波艺术、油画、卡通画
+baidu.aizuohua.style=二次元
+
+
+##阿里云通义千问设置
+#通义千问apiKey
+aliyun.appKey=sk-3735b31db8534aed959acb7cba00a25f
+#通义千问接口地址
+aliyun.tongyiqianwen.url=https://dashscope.aliyuncs.com/api/v1/services/aigc/text-generation/generation
+#通义万象接口地址
+aliyun.tongyiwanxiang.url=https://dashscope.aliyuncs.com/api/v1/services/aigc/text2image/image-synthesis
+#通义万象获取图片接口地址
+aliyun.tongyiwanxiang.getImg.url=https://dashscope.aliyuncs.com/api/v1/tasks
+
+##通义万象参数设置
+##生成的图片风格
+#"<photography>" 摄影,
+#"<portrait>" 人像写真,
+#"<3d cartoon>" 3D卡通,
+#"<anime>" 动画,
+#"<oil painting>" 油画,
+#"<watercolor>"水彩,
+#"<sketch>" 素描,
+#"<chinese painting>" 中国画,
+#"<flat illustration>" 扁平插画,
+#"<auto>" 默认
+aliyun.tongyiwanxiang.style=auto
+##生成的图片数量 1-10 默认1
+aliyun.tongyiwanxiang.num=1
+##生成的图片大小 1024*1024, 720*1280, 1280*720,默认1024*1024
+aliyun.tongyiwanxiang.size=1024*1024
 
 
 ##cq机器人设置
