--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
         <!--    <artifactId>dashscope-sdk-java</artifactId>-->
         <!--    <version>${tongyiqianwen.version}</version>-->
         <!--</dependency>-->
+
+        <!-- ssh  -->
+        <!-- https://mvnrepository.com/artifact/com.github.mwiede/jsch -->
+        <dependency>
+            <groupId>com.github.mwiede</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.2.11</version>
+        </dependency>
     </dependencies>
 
     <!--<repositories>-->
