--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+          contents: write
+          packages: write
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 8
