--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,3 +49,13 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{secrets.DOCKER_HUB_USERNAME}}/armv7-chatgpt-jdk8-cqhttp:latest
+      #push后，用ssh连接服务器执行脚本
+      - name: SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.SERVER_HOST}}
+          username: ${{secrets.SERVER_USERNAME}}
+          port: ${{secrets.SERVER_PORT }}
+          password: ${{secrets.SERVER_PASSWORD}}
+          script:
+            sh /www/chatgptForJava/start.sh
