dev分支 自动部署测试环境

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,7 +49,7 @@ jobs:
           file: ./docker/Dockerfile
           push: true
           platforms: linux/arm/v7
-          tags: ${{secrets.DOCKER_HUB_USERNAME}}/armv7-chatgpt-jdk8-cqhttp:latest
+          tags: ${{secrets.DOCKER_HUB_USERNAME}}/armv7-chatgpt-jdk8-cqhttp:dev
       #push后，用ssh连接服务器执行脚本
       - name: SSH
         uses: appleboy/ssh-action@master
@@ -59,4 +59,4 @@ jobs:
           port: ${{secrets.SERVER_PORT }}
           password: ${{secrets.SERVER_PASSWORD}}
           script:
-            sh /www/chatgptForJava/start.sh
+            sh /www/testgpt/start.sh
