主动发送消息接口无权限，继续使用被动回复，优化回复时长

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -131,5 +131,17 @@ wol.password=
 
 
 ##微信公众号
+#获取token的url 有效期2h
+#wechat.getToken.url=https://api.weixin.qq.com/cgi-bin/token
+#获取token的url 有效期5d
+wechat.getToken.url=https://api.weixin.qq.com/cgi-bin/stable_token
 #微信签名校验token
 wechat.sign.token=
+#微信公众号appid
+wechat.appid=
+#开发secret
+wechat.secret=
+#管理员账号
+wechat.admin=
+#发送消息地址
+wechat.sendMsg.url=https://api.weixin.qq.com/cgi-bin/message/custom/send
